crates/core-macros/tests/compile/fail/describe_value_non_string_map_key.rs
use std::collections::HashMap;

use actrpc_core::DescribeValue;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize, DescribeValue)]
struct Payload {
    bad: HashMap<i32, String>,
}

fn main() {}
